# sutraworks-SEAAM

./: .gitignore  CLAUDE.md  DIRECTORY.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  INSTALL.md  MANAGEMENT.md  QUICK_REFERENCE.md  README.md  WEB_API_LAUNCH.md  __init__.py  config.yaml  dna.json  dna.sha256  install.sh  main.py  manage.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
data/: seaa.db
docs/: API.md  ARCHITECTURE.md  CLI.md  DESIGN.md  OPERATIONS.md  PROJECT_STRUCTURE.md  README.md
docs/architecture/: ARCHITECTURE_EVOLUTION.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_LAYERS.md  ARCHITECTURE_VISION.md  README.md
docs/design/: CORE_ORGANS_DESIGN.md  CORE_ORGANS_IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  PLATFORM_REVIEW.md  README.md
docs/evolution/: CURRENT_STATUS.md  README.md  ROBINSON_BIRTH_PACKAGE.md  WEEK2_5_COMPLETION.md  WEEK2_COMPLETION.md
docs/guides/: QUICK_START.md  README.md  START_HERE.md  TROUBLESHOOTING.md
docs/internal/: README.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
seaa/: __init__.py
seaa/cli/: __init__.py  commands.py  completers.py  handlers.py  repl.py  runtime.py
seaa/connectors/: __init__.py  llm_gateway.py
seaa/core/: __init__.py  config.py  exceptions.py  logging.py  remote_logging.py
seaa/cortex/: __init__.py  architect.py  prompt_loader.py
seaa/dna/: __init__.py  repository.py  schema.py
seaa/kernel/: __init__.py  assimilator.py  beacon.py  bus.py  genealogy.py  genesis.py  identity.py  immunity.py  materializer.py  observer.py  protocols.py
seaam/: __init__.py
seaam/architect/: thought.py
seaam/connectors/: __init__.py  llm_gateway.py
seaam/core/: __init__.py  config.py  exceptions.py  logging.py
seaam/cortex/: __init__.py  architect.py  prompt_loader.py
seaam/dna/: __init__.py  repository.py  schema.py
seaam/kernel/: __init__.py  assimilator.py  bus.py  genealogy.py  genesis.py  immunity.py  (+1 more)
soma/: README.md  __init__.py
tests/: conftest.py
(+68 files in other folders)
